--- a/divng.html
+++ b/divng.html
@@ -1,8 +1,29 @@
-<DOCTYPE html>
-<html>
-    <head>
-        <title>ダイビング</title>
-    </head>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+<meta charset="UTF-8">
+<title>ダイビングの世界 | トップ</title>
+</head>
+<body>
+<header>
+<h1>ダイビングの世界</h1>
+<nav>
+<ul>
+<li><a href="sport.html">ダイビングスポット</a></li>
+<li><a href="license.html">ライセンスについて</a></li>
+</ul>
+</nav>
+</header>
 
 
+<main>
+<p>ダイビングは、美しい海中世界を体験できる魅力的なアクティビティです。</p>
+<p>このサイトでは、ダイビングスポットやライセンス情報をご紹介します。</p>
+</main>
+
+
+<footer>
+<p>&copy; 2026 Diving Website</p>
+</footer>
+</body>
 </html>
