--- a/license.html
+++ b/license.html
@@ -1,80 +1,83 @@
-<head>
-<meta charset="UTF-8">
-<title>ダイビングライセンス完全ガイド</title>
-</head>
-<body>
-<header>
-<h1>ダイビングライセンス完全ガイド</h1>
-<nav>
-<ul>
-<li><a href="#about">ライセンスとは</a></li>
-<li><a href="#types">ライセンスの種類</a></li>
-<li><a href="#flow">取得の流れ</a></li>
-</ul>
-</nav>
-<hr>
-</header>
+<!DOCTYPE html>
+<html lang="ja"></html>
+    <head>
+        <meta charset="UTF-8">
+        <title>ダイビングライセンス完全ガイド</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <header>
+            <h1>ダイビングライセンス完全ガイド</h1>
+            <nav>
+                <ul>
+                    <li><a href="#about">ライセンスとは</a></li>
+                    <li><a href="#types">ライセンスの種類</a></li>
+                    <li><a href="#flow">取得の流れ</a></li>
+                </ul>
+            </nav>
+            <hr>
+        </header>
 
 
-<main>
-<section id="about">
-<h2>ライセンスとは</h2>
-<p>
-ダイビングライセンス（Cカード）とは、スキューバダイビングを安全に行うための
-知識と技術を身につけたことを証明する認定資格です。
-</p>
-<p>
-ライセンスを取得することで、国内外のダイビングショップで
-ファンダイビングに参加できるようになります。
-</p>
-</section>
+        <main>
+            <section id="about">
+                <h2>ライセンスとは</h2>
+                <p>
+                ダイビングライセンス（Cカード）とは、スキューバダイビングを安全に行うための
+                知識と技術を身につけたことを証明する認定資格です。
+                </p>
+                <p>
+                ライセンスを取得することで、国内外のダイビングショップで
+                ファンダイビングに参加できるようになります。
+                </p>
+            </section>
 
 
-<hr>
+            <hr>
 
 
-<section id="types">
-<h2>ライセンスの種類</h2>
-<ul>
-<li>
-<strong>オープン・ウォーター・ダイバー</strong><br>
-初心者向けの基本ライセンス。水深18mまで潜ることができます。
-</li>
-<li>
-<strong>アドバンスド・オープン・ウォーター・ダイバー</strong><br>
-経験を積み、水深30mまでのダイビングが可能になります。
-</li>
-<li>
-<strong>レスキュー・ダイバー</strong><br>
-トラブル対応や安全管理能力を高める中上級者向け資格です。
-</li>
-</ul>
-</section>
+            <section id="types">
+                <h2>ライセンスの種類</h2>
+                <ul>
+                    <li>
+                        <strong>オープン・ウォーター・ダイバー</strong><br>
+                        初心者向けの基本ライセンス。水深18mまで潜ることができます。
+                    </li>
+                    <li>
+                        <strong>アドバンスド・オープン・ウォーター・ダイバー</strong><br>
+                        経験を積み、水深30mまでのダイビングが可能になります。
+                    </li>
+                    <li>
+                        <strong>レスキュー・ダイバー</strong><br>
+                        トラブル対応や安全管理能力を高める中上級者向け資格です。
+                        </li>
+                </ul>
+            </section>
 
 
-<hr>
+            <hr>
 
 
-<section id="flow">
-<h2>ライセンス取得の流れ</h2>
-<ol>
-<li>学科講習（ダイビングの基礎知識）</li>
-<li>プール講習（基本スキルの練習）</li>
-<li>海洋実習（実際の海でのダイビング）</li>
-<li>認定・ライセンス取得</li>
-</ol>
-<p>
-一般的には2〜3日程度で取得可能です。
-</p>
-</section>
-</main>
+            <section id="flow">
+                <h2>ライセンス取得の流れ</h2>
+                <ol>
+                    <li>学科講習（ダイビングの基礎知識）</li>
+                    <li>プール講習（基本スキルの練習）</li>
+                    <li>海洋実習（実際の海でのダイビング）</li>
+                    <li>認定・ライセンス取得</li>
+                </ol>
+                <p>
+                一般的には2〜3日程度で取得可能です。
+                </p>
+            </section>
+        </main>
 
 
-<hr>
+        <hr>
 
 
-<footer>
-<p>&copy; 2026 Diving License Guide</p>
-</footer>
-</body>
+        <footer>
+            <p>&copy; 2026 Diving License Guide</p>
+        </footer>
+    </body>
 </html>
