2ページ目完成

--- a/license.html
+++ b/license.html
@@ -2,12 +2,16 @@
 <html lang="ja"></html>
     <head>
         <meta charset="UTF-8">
-        <title>ダイビングライセンス完全ガイド</title>
-        <link rel="stylesheet" href="style.css">
+        <title>ダイビングライセンス解説❤</title>
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Kaisei+Decol&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
-            <h1>ダイビングライセンス完全ガイド</h1>
+            <li><a href="divng.html">ホームに戻る</a></li>
+            <h1>ダイビングライセンス解説❤</h1>
             <nav>
                 <ul>
                     <li><a href="#about">ライセンスとは</a></li>
@@ -78,6 +82,7 @@
 
         <footer>
             <p>&copy; 2026 Diving License Guide</p>
+            <a href="#top">▲ ページ上部へ戻る</a>       
         </footer>
     </body>
 </html>
