--- a/divng.html
+++ b/divng.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <title>ダイビングの世界 | トップ</title>
+
+
 </head>
 
 <body>
@@ -10,7 +13,7 @@
         <h1>ダイビングの世界</h1>
         <nav>
             <ul>
-                <li><a href="sport.html">ダイビングスポット</a></li>
+                <li><a href="sport.html">ダイビング機材について</a></li>
                 <li><a href="license.html">ライセンスについて</a></li>
             </ul>
             </nav>
@@ -18,13 +21,13 @@
 
 
     <main>
-        <p>ダイビングは、美しい海中世界を体験できる魅力的なアクティビティです。</p>
-        <p>このサイトでは、ダイビングスポットやライセンス情報をご紹介します。</p>
+        <p>このサイトでは、ダイビング機材やライセンス情報について紹介します。</p>
     </main>
 
 
     <footer>
         <p>&copy; 2026 Diving Website</p>
+        <a href="#top">▲ ページ上部へ戻る</a>
     </footer>
 </body>
 </html>
