--- a/sport.html
+++ b/sport.html
@@ -1,28 +1,88 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-<meta charset="UTF-8">
-<title>ダイビングスポット</title>
-</head>
-<body>
-<header>
-<h1>ダイビングスポット</h1>
-<nav>
-<a href="index.html">トップへ戻る</a>
-</nav>
-</header>
+    <head>
+        <meta charset="UTF-8">
+        <title>ダイビング機材解説</title>
+        <link rel="stylesheet" href="css/sport.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Kaisei+Decol&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <header>
+            <li><a href="divng.html">ホームに戻る</a></li>
+            <h1>ダイビング機材解説❤</h1>
+            <nav>
+                <ul>
+                    <li><a href="#about">機材とは</a></li>
+                    <li><a href="#types">主な機材の種類</a></li>
+                    <li><a href="#flow">準備と使い方</a></li>
+                </ul>
+            </nav>
+            <hr>
+        </header>
 
+        <main>
+            <section id="about">
+                <h2>ダイビング機材とは</h2>
+                <p>
+                ダイビング機材とは、水中で安全かつ快適に行動するために必要な装備一式のことです。
+                </p>
+                <p>
+                正しい機材を使用することで、呼吸の確保、浮力調整、視界の確保などが可能になり、
+                安全性が大きく向上します。
+                </p>
+            </section>
 
-<main>
-<ul>
-<li><a href="okinawa.html">沖縄</a></li>
-<li><a href="guam.html">グアム</a></li>
-</ul>
-</main>
+            <hr>
 
+            <section id="types">
+                <h2>主な機材の種類</h2>
+                <ul>
+                    <li>
+                        <strong>マスク・シュノーケル</strong><br>
+                        水中で視界を確保し、水面で呼吸するための基本装備です。
+                    </li>
+                    <li>
+                        <strong>フィン</strong><br>
+                        少ない力で効率よく泳ぐための足ヒレです。
+                    </li>
+                    <li>
+                        <strong>レギュレーター</strong><br>
+                        タンク内の空気を呼吸できる圧力に調整する重要な装置です。
+                    </li>
+                    <li>
+                        <strong>BCD（浮力調整具）</strong><br>
+                        空気量を調整して水中での浮き沈みをコントロールします。
+                    </li>
+                    <li>
+                        <strong>ウェットスーツ</strong><br>
+                        体温低下を防ぎ、ケガから身体を守ります。
+                    </li>
+                </ul>
+            </section>
 
-<footer>
-<p>&copy; 2026 Diving Website</p>
-</footer>
-</body>
+            <hr>
+
+            <section id="flow">
+                <h2>機材の準備と使い方</h2>
+                <ol>
+                    <li>機材の点検（破損や空気残量の確認）</li>
+                    <li>正しい装着（インストラクターの指示に従う）</li>
+                    <li>浅場での動作確認</li>
+                    <li>ダイビング開始</li>
+                </ol>
+                <p>
+                初心者は必ずインストラクターの指導のもとで使用しましょう。
+                </p>
+            </section>
+        </main>
+
+        <hr>
+
+        <footer>
+            <p>&copy; 2026 Diving Equipment Guide</p>
+            <a href="#top">▲ ページ上部へ戻る</a>       
+        </footer>
+    </body>
 </html>
