--- a/divng.html
+++ b/divng.html
@@ -3,31 +3,48 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>ダイビングの世界 | トップ</title>
-
-
+    <title>ダイビング解説 | トップ</title>
+    <link rel="stylesheet" href="css/diving.css">
 </head>
 
-<body>
+<body id="top">
     <header>
-        <h1>ダイビングの世界</h1>
+        <h1>ダイビング解説</h1>
         <nav>
             <ul>
                 <li><a href="sport.html">ダイビング機材について</a></li>
                 <li><a href="license.html">ライセンスについて</a></li>
             </ul>
-            </nav>
+        </nav>
     </header>
 
-
     <main>
-        <p>このサイトでは、ダイビング機材やライセンス情報について紹介します。</p>
+        <p>
+            このサイトでは、ダイビングに必要な機材の解説や、
+            ライセンス取得に関する基本情報を紹介します。
+        </p>
+
+        <section>
+            <h2>ダイビングとは</h2>
+            <p>
+                ダイビングとは、専用の機材を使用して水中に潜り、
+                海の中の景色や生き物を楽しむマリンスポーツです。
+            </p>
+            <p>
+                スキューバダイビングでは、タンクに入った空気を使って呼吸を行い、
+                水中で長時間活動することができます。
+            </p>
+            <p>
+                安全に楽しむためには、正しい知識と技術を身につけ、
+                ルールを守って行うことがとても重要です。
+            </p>
+        </section>
     </main>
 
-
     <footer>
-        <p>&copy; 2026 Diving Website</p>
+        <p>&copy; 2026 Diving License Guide</p>
         <a href="#top">▲ ページ上部へ戻る</a>
     </footer>
 </body>
+
 </html>
