--- a/license.html
+++ b/license.html
@@ -2,7 +2,7 @@
 <html lang="ja"></html>
     <head>
         <meta charset="UTF-8">
-        <title>ダイビングライセンス解説❤</title>
+        <title>ダイビングライセンス解説</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,7 +11,7 @@
     <body>
         <header>
             <li><a href="divng.html">ホームに戻る</a></li>
-            <h1>ダイビングライセンス解説❤</h1>
+            <h1>ダイビングライセンス解説</h1>
             <nav>
                 <ul>
                     <li><a href="#about">ライセンスとは</a></li>
