--- a/sport.html
+++ b/sport.html
@@ -56,7 +56,7 @@
                         空気量を調整して水中での浮き沈みをコントロールします。
                     </li>
                     <li>
-                        <strong>ウェットスーツ</strong><br>
+                        <strong>ウェットスーツ、ドライスーツ</strong><br>
                         体温低下を防ぎ、ケガから身体を守ります。
                     </li>
                 </ul>
@@ -68,12 +68,12 @@
                 <h2>機材の準備と使い方</h2>
                 <ol>
                     <li>機材の点検（破損や空気残量の確認）</li>
-                    <li>正しい装着（インストラクターの指示に従う）</li>
-                    <li>浅場での動作確認</li>
+                    <li>機材をつける(BCDやウエットスーツなど)</li>
+                    <li>海に入りフィンを着用</li>
                     <li>ダイビング開始</li>
                 </ol>
                 <p>
-                初心者は必ずインストラクターの指導のもとで使用しましょう。
+                初心者は必ずインストラクターの指導に従いましょう。
                 </p>
             </section>
         </main>
