--- a/divng.html
+++ b/divng.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>ダイビング解説 | トップ</title>
     <link rel="stylesheet" href="css/diving.css">
+    <link href="https://fonts.googleapis.com/css2?family=Kaisei+Decol&display=swap" rel="stylesheet">
 </head>
 
 <body id="top">
