--- a/sport.html
+++ b/sport.html
@@ -10,8 +10,8 @@
     </head>
     <body>
         <header>
-            <li><a href="divng.html">ホームに戻る</a></li>
-            <h1>ダイビング機材解説❤</h1>
+            <li><a href="index.html">ホームに戻る</a></li>
+            <h1>ダイビング機材解説</h1>
             <nav>
                 <ul>
                     <li><a href="#about">機材とは</a></li>
