--- a/license.html
+++ b/license.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <li><a href="divng.html">ホームに戻る</a></li>
+            <li><a href="index.html">ホームに戻る</a></li>
             <h1>ダイビングライセンス解説</h1>
             <nav>
                 <ul>
