--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
     </header>
 
     <main>
-        <p>
+        <div class="intro-box">
+            <p>
             このサイトでは、ダイビングに必要な機材の解説や、
             ライセンス取得に関する基本情報を紹介します。
-        </p>
+            </p>
+        </div>
 
-        <section>
+        <section class="content-box">
             <h2>ダイビングとは</h2>
             <p>
                 ダイビングとは、専用の機材を使用して水中に潜り、
